--- a/src/Strength.css
+++ b/src/Strength.css
@@ -89,6 +89,8 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin:auto;
+  margin-bottom:18px
 }
 
 button:hover {
@@ -161,5 +163,12 @@ button:hover {
   }
   label {
     margin-left: 10px;
+  }
+  button{
+    width:98%
+  }
+  .img-container img{
+    margin-left:-1%
+ 
   }
 }
